# Carrier-Grade-Telecom-Signalling-Routing-Server

./: BUILD.md  PROJECT_EXPLANATION.md  README.md
telecom_router/: CMakeLists.txt
telecom_router/include/: alr_store.hpp  common.hpp  ipc_mq.hpp  protocol.hpp  thread_pool.hpp
telecom_router/src/: flx_engine.cpp  routing_server.cpp
